
/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Hieu Dang
 */
package ucf.assignments;

import java.util.ArrayList;

public class TodoListModel {
    private ArrayList<TodoItem> list;

    public void addItem(TodoItem item){

    }
    public void removeItem(TodoItem item){

    }
    public TodoItem searchItem(String title) {

    }
    public void editItemTitle(String title){

    }
    public void editItemDueDate(String dueDate){

    }
    public void editItemDescription(String description){

    }
    public void editIsComplete(Boolean isComplete){

    }
    public void save(ArrayList<TodoItem> list){

    }
    public void clear(ArrayList<TodoItem>){

    }
    public void displayIncomplete(ArrayList<TodoItem>){

    }
    public void displayCompleted(ArrayList<TodoItem>){

    }
    +load()
}
