@startuml
'https://plantuml.com/class-diagram
class ToDoApp extends org.javafx.Application{
    main()
    start()
}
class ToDoListController implements Initializable{
    -model: ListsMenu
    -refresh()
    'GUI event handlers
    +Initialize()
    +AddButtonClicked();
    +DeleteButtonClicked();
    +UpdateButtonClicked();
    +LoadButtonClicked();
    +SaveButtonClicked();
}

class TodoListModel{
    ToDoItem: ArrayList

    +addItem(TodoItem)
    +removeItem(TodoItem)
    +searchItem(String): TodoItem
    +editItemTitle(TodoItem, String)
    +editItemDueDate(TodoItem, String)
    +editItemDescription(TodoItem,String)
    +isComplete(TodoItem, Boolean)
    +save()
    +clear()
    +displayIncomplete()
    +displayCompleted()
}
class TodoItem{
    description: String
    dueDate: String
    isComplete: Boolean


    TodoItem(String,String,Boolean)

    +setDescription(String)
    +setTitle(String)
    +setDueDate(String)
    +setIsComplete(Boolean)
    +getDescription()
    +getDueDate()
    +getIsComplete()
    +getTitle()

}


ToDoApp -- ToDoListController
ToDoListController -- TodoListModel
TodoListModel *-- TodoItem
@enduml